# ba

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.ac/: config.json  issues.jsonl
.ba/: issues.jsonl
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.opencode/skills/ba/: SKILL.md
codex-skill/: CLAUDE.md.snippet  README.md  SKILL.md
opencode-plugin/: README.md  package.json
plugin/: README.md
plugin/commands/: init.md  quickstart.md  status.md
src/: main.rs
