[package]
name = "ba"
version = "0.2.0"
edition = "2024"
description = "Simple task tracking for LLM sessions"
license = "LicenseRef-Proprietary"
repository = "https://github.com/cloud-atlas-ai/ba"
keywords = ["ai", "tasks", "llm", "multi-agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ba"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
